# gtm-web

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .parcelrc  .travis.yml  Cargo.toml  README.md  build.rs  data-commits.json  demo.js  hola.ts  index.html  localhttp.html  localhttp.ts  make.js  make.mjs  navbar.html  navbar.ts  package.json  postcss.config.js  rollup.config-electron.js  rollup.config.js  rollup.config.mjs  status.html  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.base.json  tsconfig.json  tsconfig2.json
@app/: App-test.ts  App.svelte  Chart.svelte  ChartPalettePicker.svelte  Commit-suite.ts  Commit-test.ts  Commit.svelte  DashboardCard-test.ts  DashboardCard.svelte  DatePicker.svelte  Fetch.svelte  FileNotes.svelte  Home-suite.ts  Icon.svelte  Login-suite.ts  Login.svelte  Navbar-suite.ts  Navbar-test.ts  Navbar.svelte  Project-test.ts  Settings-test.ts  Settings.svelte  Web-suite.ts  app.ts  charts.ts  test.html  test.ts  web.ts
@electron/: index.html  main.ts  preload.ts
@format/: package.json
@gtm/: gtm-mock.ts  gtm-test.ts  gtm.ts  package.json
@gtm-app/: .gitignore  index.html  index.ts  package.json  rollup.config.js  svelte.config.js  tsconfig.json
@gtm-electron/: index.html  main.ts  package.json  preload.ts  tsconfig.json
@gtm-format/: package.json  tsconfig.json
@gtm-git/: .gitignore  index.ts  package.json  test.ts
@gtm-mock/: package.json  tsconfig.json
@gtm-notes/: package.json
@mock/: mock.ts  package.json
@notes/: format.ts  index.ts  notes.ts  package.json  service.ts
@web/: index.html  main.ts
assets/: main.css
benches/: parse_bench.rs
data/: workdir.json
docs/: index.html
gtm/: Cargo.toml
gtm-electron/: index.html  package.json  preload.ts
gtm-git/: index.ts  package.json  (+1 more)
gtm/src/: lib.rs  main.rs
gtm/tests/: test.rs
gtm/tests/cases/: project.json
gtmserv/: Cargo.toml  build.rs
gtmserv/src/: clone.rs  lib.rs  main.rs
gtmserv/tests/: test.rs
(+151 files in other folders)
