[package]
name = "gtm"
version = "0.1.1"
authors = ["Luigi <luismastrangelo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
git2 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
regex = "1"
lazy_static = "1.4.0"
structopt = "0.3.13"
dirs = "2.0"
chrono = "0.4"
ansi_term = "0.12.1"
atty = "0.2.14"
hyper = "0.13"
hyper-tls = "0.4.1"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
bytes = "0.5"
url = "2.1.1"
log = "0.4.8"
env_logger = "0.7.1"

[dev-dependencies]
tempfile = "3"
maplit = "1.0.2"
assert_cmd = "1.0.1"
predicates = "1.0.4"
criterion = "0.3"

[build-dependencies]
chrono = "0.4"

[[bench]]
name = "parse_bench"
harness = false