[package]
name = "gtm"
version = "0.1.0"
authors = ["Luigi <luismastrangelo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { version = "0.5.4" }
git2 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
regex = "1"
lazy_static = "1.4.0"
structopt = "0.3.13"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
dirs = "2.0"
