[package]
name = "gtmserv"
version = "0.1.0"
authors = ["Luigi <luismastrangelo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
git2 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
regex = "1"
lazy_static = "1.4.0"
structopt = "0.3.13"
dirs = "2.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
maplit = "1.0.2"
assert_cmd = "1.0.1"
